--- a/discorde-front/src/app/app.component.html
+++ b/discorde-front/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="bar">
   <a routerLink="/">Home</a>
   <a *ngIf="!(connected$ | async)" routerLink="/login">Login</a>
-  <a *ngIf="(connected$ | async)">Logout</a>
+  <a *ngIf="(connected$ | async)" routerLink="/new">Create chat</a>
+  <a *ngIf="(connected$ | async)" (click)="logout()">Logout</a>
 </div>
 
 <router-outlet />
