--- a/discorde-front/src/pages/chat-page/chat-page.component.css
+++ b/discorde-front/src/pages/chat-page/chat-page.component.css
@@ -1,5 +1,21 @@
 .main {
   display: flex;
   width: 100vw;
+  height: 100%;
+}
+
+.container {
+  width: 80vw;
   height: 100vh;
+  padding: 15px;
+}
+
+.messages {
+  width: 100%;
+  height: 80vh;
+  overflow: auto;
+}
+
+input {
+  width: 100%;
 }
