--- a/discorde-front/src/pages/new-chat-page/new-chat-page.component.html
+++ b/discorde-front/src/pages/new-chat-page/new-chat-page.component.html
@@ -2,21 +2,21 @@
 
 <ul>
   <li *ngFor="let user of (users$ | async)">
-    <button class="user" (click)="privateChat(user.username)">{{ user.username }}</button>
+    <button (click)="privateChat(user.username)" class="user">{{ user.username }}</button>
   </li>
 </ul>
 
 <h1>Or create a chat group</h1>
 
 <div>Name of the group</div>
-<input type="text" [ngModel]="name" (ngModelChange)="updateName($event)">
+<input (ngModelChange)="updateName($event)" [ngModel]="name" type="text">
 
 <br>
 
 <button (click)="people.push('')">Add guy</button>
 <div *ngFor="let p of people">
-  <app-user-selector [value]="p" (changed)="update(p, $event)"></app-user-selector>
-  <a *ngIf="people.length > 2" (click)="delete(p)">delete</a>
+  <app-user-selector (changed)="update(p, $event)" [value]="p"></app-user-selector>
+  <a (click)="delete(p)" *ngIf="people.length > 2">delete</a>
 </div>
 
 <button (click)="createGroup()">Create</button>
