--- a/discorde-front/src/pages/chat-page/chat-page.component.html
+++ b/discorde-front/src/pages/chat-page/chat-page.component.html
@@ -1,8 +1,10 @@
 <div class="main">
- <div class="container">
-   <div class="messages">
-     <app-message *ngFor="let msg of messages" [author]="msg.author" [timestamp]="(msg.timestamp$ | async) || 'error'" [message]="(msg.message$ | async) || ''"></app-message>
-   </div>
-   <input type="text" (keydown.enter)="send()" [ngModel]="body" (ngModelChange)="updateBody($event)" placeholder="Type your awesome message">
- </div>
+  <div class="container">
+    <div class="messages">
+      <app-message *ngFor="let msg of messages" [author]="msg.author" [message]="(msg.message$ | async) || ''"
+                   [timestamp]="(msg.timestamp$ | async) || 'error'"></app-message>
+    </div>
+    <input (keydown.enter)="send()" (ngModelChange)="updateBody($event)" [ngModel]="body" placeholder="Type your awesome message"
+           type="text">
+  </div>
 </div>
