--- a/discorde-front/src/pages/register-page/register-page.component.html
+++ b/discorde-front/src/pages/register-page/register-page.component.html
@@ -1,6 +1,6 @@
 Username
-<input type="text" [ngModel]="username" (ngModelChange)="updateUsername($event)">
+<input (ngModelChange)="updateUsername($event)" [ngModel]="username" type="text">
 Password
-<input type="text" [ngModel]="password" (ngModelChange)="updatePassword($event)">
+<input (ngModelChange)="updatePassword($event)" [ngModel]="password" type="text">
 
 <button (click)="send()">Register</button>
